--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "electron-store": "^10.0.0",
     "electron-updater": "^6.1.7",
     "embla-carousel-react": "^7.1.0",
+    "export-to-csv": "^1.4.0",
     "i18next": "^23.16.4",
     "lodash": "^4.17.21",
     "mantine-form-yup-resolver": "^2.0.0",
